# put.io-aria2c-downloader

./: .gitignore  .pylintrc  .travis.yml  README.md  config.ini.example  is_putio_downloader_running  putio-aria2c-downloader.py  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
putio_downloader/: __init__.py  cli.py  putio_aria2c_downloader.py
tests/: test_cli.py  test_config.py  test_crc.py
