[wheel]
universal = 1

[flake8]
max_line_length = 100
exclude = .tox,venv

[tools:pytest]
python_files = tests/test_*.py tests/**/test_*.py

[isort]
line_length = 80
skip = .tox,venv
default_section = THIRDPARTY
known_first_party = putio_downloader,tests

[commitizen]
version = 2.2.0
files = [
	"putio_downloader/__init__.py",
	"setup.py:version"
	]
tag_format = "v$version"

[options.entry_points]
console_scripts = 
	putio-download=putio_downloader.cli:main

